[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/panels/inventory/inventory_panel.gd" type="Script" id=2]

[node name="inventory_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="layout"]
margin_right = 3840.0
margin_bottom = 133.0

[node name="all" type="Button" parent="layout/buttons"]
margin_left = 404.0
margin_right = 502.0
margin_bottom = 133.0
size_flags_horizontal = 6
text = "All"
expand_icon = true

[node name="weapons" type="Button" parent="layout/buttons"]
margin_left = 1156.0
margin_right = 1570.0
margin_bottom = 133.0
size_flags_horizontal = 6
text = "Weapons"
expand_icon = true

[node name="armor" type="Button" parent="layout/buttons"]
margin_left = 2143.0
margin_right = 2404.0
margin_bottom = 133.0
size_flags_horizontal = 6
text = "Armor"
expand_icon = true

[node name="consumables" type="Button" parent="layout/buttons"]
margin_left = 2890.0
margin_right = 3479.0
margin_bottom = 133.0
size_flags_horizontal = 6
text = "Consumables"
expand_icon = true

[node name="sort_button" type="Button" parent="layout/buttons"]
margin_left = 3642.0
margin_right = 3840.0
margin_bottom = 133.0
text = "Sort"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="ItemList" parent="layout"]
margin_top = 137.0
margin_right = 3840.0
margin_bottom = 2160.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 10
icon_mode = 0

[connection signal="visibility_changed" from="." to="." method="_on_inventory_panel_visibility_changed"]
[connection signal="pressed" from="layout/buttons/all" to="." method="_on_all_pressed"]
[connection signal="pressed" from="layout/buttons/weapons" to="." method="_on_weapons_pressed"]
[connection signal="pressed" from="layout/buttons/armor" to="." method="_on_armor_pressed"]
[connection signal="pressed" from="layout/buttons/consumables" to="." method="_on_consumables_pressed"]
[connection signal="pressed" from="layout/buttons/sort_button" to="." method="_on_sort_button_pressed"]
